# couchbase-admin-service

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_SUMMARY.md  Dockerfile  JENKINS_SETUP_GUIDE.md  Jenkinsfile  LICENSE  README.md  SETUP_GUIDE.md  build.sh  deploy.sh  docker-compose.yml  env.example  package.sh  setup-jenkins.sh  test-api.sh  test-complete-workflow.sh  test-docker.sh  test-jenkins.sh  test-service.sh  test-user-management.sh
jenkins/: docker-compose.yml
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
src/: config.rs  error.rs  main.rs  middleware.rs  models.rs  services.rs
src/routes/: buckets.rs  collections.rs  mod.rs  scopes.rs  users.rs
